fix: ci merge check (#4921)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,7 +75,7 @@ jobs:
   generate-config:
     docker:
       - image: aztecprotocol/alpine-build-image
-    resource_class: xlarge
+    resource_class: large
     steps:
       - *checkout
       - *setup_env
@@ -1499,6 +1499,21 @@ workflows:
       # Everything that must complete before deployment.
       - end:
           requires:
+            - barretenberg-x86_64-linux-gcc
+            - barretenberg-x86_64-linux-clang
+            - barretenberg-x86_64-linux-clang-assert
+            - barretenberg-x86_64-linux-clang-fuzzing
+            - barretenberg-wasm-linux-clang
+            - barretenberg-x86_64-linux-clang-sol
+            - barretenberg-bench
+            - barretenberg-proof-system-tests
+            - barretenberg-dsl-tests
+            - barretenberg-tests
+            - barretenberg-stdlib-tests
+            - barretenberg-stdlib-recursion-ultra-tests
+            - barretenberg-join-split-tests
+            - barretenberg-acir-tests-bb
+            - barretenberg-docs
             - mainnet-fork
             - e2e-2-pxes
             - e2e-note-getter
