feat: Nullifier read requests in public kernel (#4910)
Verifying nullifier read requests in tail public kernel circuit.

--- a/noir-projects/noir-protocol-circuits/crates/public-kernel-tail/Nargo.toml
+++ b/noir-projects/noir-protocol-circuits/crates/public-kernel-tail/Nargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "private_kernel_lib"
-type = "lib"
+name = "public_kernel_tail"
+type = "bin"
 authors = [""]
 compiler_version = ">=0.18.0"
 
 [dependencies]
 types = { path = "../types" }
-reset_kernel_lib = { path = "../reset-kernel-lib" }
+public_kernel_lib = { path = "../public-kernel-lib" }
