--- a/compiler/wasm/package.json
+++ b/compiler/wasm/package.json
@@ -75,7 +75,7 @@
     "sinon": "^17.0.1",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.1",
-    "typescript": "~5.2.2",
+    "typescript": "^5.4.2",
     "unzipit": "^1.4.3",
     "url": "^0.11.3",
     "webpack": "^5.90.1",
